# dsc

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CHANGES  LICENSE  Makefile.am  README.md  UPGRADE.md  configure.ac  sonar-project.properties.local
.github/workflows/: codeql.yml
branches/autonomica/collector/TmfBase/Hapy/src/: Makefile.am
branches/autonomica/collector/TmfBase/Hapy/src/include/Hapy/: Algorithms.h  RulePtr.h
branches/kkeys-features2/: mk-release.sh
branches/sql/: mk-release.sh
branches/sql/collector/: Makefile
branches/sql/doc/: dsc-manual.tex
collector/: Makefile
collector/TmfBase/Hapy/: configure
collector/cron/: Makefile
collector/dsc/: Makefile.in  ParseConfig.cc  base64.c  base64.h  certain_qnames_index.h  client_ip_addr_index.c  client_ip_addr_index.h  client_ip_net_index.c  client_ip_net_index.h  config.h.in  config_hooks.c  configure  configure.ac  configure.scan  country_index.c  country_index.h  daemon.c  dataset_opt.h  dns_ip_version_index.c  dns_ip_version_index.h  dns_message.c  dns_message.h  dns_protocol.c  dns_source_port_index.c  dns_source_port_index.h  do_bit_index.h  dsc.conf.sample  edns_bufsiz_index.c  edns_bufsiz_index.h  edns_version_index.h  generic_counter.h  hashtbl.c  hashtbl.h  idn_qname_index.h  inX_addr.c  inX_addr.h  ip_direction_index.c  ip_direction_index.h  ip_proto_index.h  ip_version_index.h  (+35 more)
collector/dsc/test/: 1458044657.xml_gold  Makefile.in
cron/: Makefile.am  upload-prep.pl  upload-prep.sh  upload-rsync.sh  upload-ssh.sh  upload-x509.sh
debian/: changelog  control  copyright  dirs  docs  rules
doc/: Makefile  dsc-manual.tex
dsc/branches/kkeys-features2/: LICENSE
dsc/branches/kkeys-features2/collector/TmfBase/Hapy/doc/: Makefile.am
dsc/branches/sql/: CHANGES
dsc/branches/sql/collector/TmfBase/Hapy/: Makefile.am  NEWS  bootstrap.sh  configure.in
dsc/branches/sql/collector/TmfBase/Hapy/doc/: Makefile.am  Makefile.in
dsc/branches/sql/collector/TmfBase/Hapy/src/: Area.cc  Makefile.am  Parser.cc  PrettyPrint.cc  Result.cc  RuleId.cc  Rules.cc
dsc/branches/sql/collector/TmfBase/Hapy/src/include/Hapy/: ActionBase.h  Area.h  MemAction.h  NumericLimits.h  Optimizer.h  Parser.h  PreeFarm.h  PreeKids.h  PrettyPrint.h  RuleBase.h  RuleCompFlags.h  RuleId.h  RulePtr.h  String.h  config.h
dsc/branches/sql/collector/TmfBase/Hapy/tests/: Makefile.in  TestMaker.cc
dsc/tags/2007-05-15-merged-branches-kkeys-features-to-trunk/collector/TmfBase/Hapy/tests/: Makefile.am
dsc/trunk/: CHANGES  COPYRIGHT  mk-release.sh
dsc/trunk/collector/: Makefile  update-tmfbase.sh
dsc/trunk/collector/TmfBase/Hapy/tests/: Makefile.am  tests.cfg
dsc/trunk/doc/: Makefile  dsc-arch.fig  dsc-manual.tex
dsc/trunk/presenter/: Makefile
m4/: dl.sh
ports/dsc-collector/: distinfo  pkg-descr
presenter/: Makefile
presenter/cron/: Makefile
presenter/extractor/: Makefile
presenter/grapher/: Makefile
rpm/: dsc.spec  spec
src/: Makefile.am  ParseConfig.cc  asn_index.c  asn_index.h  base64.c  base64.h  byteorder.h  certain_qnames_index.c  certain_qnames_index.h  client_index.c  client_index.h  client_ip_addr_index.c  client_ip_addr_index.h  client_ip_net_index.c  client_ip_net_index.h  client_subnet_index.c  client_subnet_index.h  compat.c  compat.h  config.h.in  config_hooks.c  config_hooks.h  country_index.c  country_index.h  daemon.c  dataset_opt.h  dns_ip_version_index.c  dns_ip_version_index.h  dns_message.c  dns_message.h  dns_protocol.c  dns_protocol.h  dns_source_port_index.c  dns_source_port_index.h  dnstap.c  dnstap.h  do_bit_index.c  do_bit_index.h  dsc-psl-convert  dsc-psl-convert.1.in  (+97 more)
src/TmfBase/Hapy/: Makefile.in  acinclude.m4  bootstrap.sh
src/TmfBase/Hapy/cfgaux/: ax_prefix_config_h.m4
src/TmfBase/Hapy/doc/: calc.cc  calci.cc  index.html  pree.html  support.html  syntax.html
src/TmfBase/Hapy/src/: Assert.cc  Buffer.cc  First.cc
src/TmfBase/Hapy/src/include/Hapy/: Action.h  Actions.h  Assert.h  Buffer.h  First.h  Result.h  Top.h  Version.h
src/TmfBase/Hapy/tests/: SpiritSpeedTest.cc  xmlgen.c
src/ext/: base64.c
src/test/: 1458044657.conf  1458044657.json_gold  1458044657.pcap  1458044657.tld_list  1458044657.xml_gold  1573730567.conf  1573730567.gold  Makefile.am  cnetmask.conf  cnetmask2.conf  cnetmask3.conf  dns6.conf  dns6.gold  dnso1tcp.conf  dnso1tcp.gold  dnstap_encrypted.conf  dnstap_encrypted.gold  dnstap_tcp.conf  dnstap_unixsock.conf  dotdoh.dnstap  h-root-aaa.pcap  knowntlds.txt  mmdb.conf  mmdb.gold  parseconf.conf  parseconf2.conf  pid.conf  pid.pcap  response_time.conf  response_time.gold  response_time2.conf  response_time2.gold  response_time3.conf  response_time3.gold  statinter.conf  statinter2.conf  test.dnstap  test1.sh  test10.sh  test11.conf  (+26 more)
src/test/test9/: bpf_vlan_tag_order.conf  bpf_vlan_tag_order.grep  dataset_already_exists.conf  dataset_already_exists.grep  dataset_response_time.conf  dataset_response_time.grep  dns_port.conf  dns_port.grep  dnstap_input_mode_set.conf  dnstap_input_mode_set.grep  dnstap_invalid_port_tcp.conf  dnstap_invalid_port_udp.conf  dnstap_invalid_port_udp.grep  dnstap_only_one.conf  dnstap_only_one.grep  geoip.conf  geoip_backend.conf  geoip_backend2.conf  interface_input_mode_set.conf  knowntlds.conf  knowntlds.grep  knowntlds2.conf  knowntlds2.grep  output_format.conf  output_format.grep  response_time_full_mode.conf  response_time_full_mode.grep  response_time_max_sec_mode.conf  response_time_max_sec_mode.grep  response_time_mode.conf  response_time_mode.grep  run_dir.conf  run_dir.grep
tags/2007-04-03_import-from-cvs/doc/: dsc-manual.tex
trunk/: CHANGES  mk-release.sh
trunk/FreeBSD-port/dsc-collector/: Makefile
trunk/collector/dsc/: Makefile.in  client_ip_addr_index.c  dns_protocol.c  edns_bufsiz_index.c  edns_version_index.h  idn_qname_index.c  ip_version_index.c  qclass_index.h  qname_index.c  qnamelen_index.h  qr_aa_bits_index.h  qtype_index.h  query_classification_index.c
trunk/presenter/cron/: Makefile
trunk/presenter/extractor/: Makefile
trunk/presenter/grapher/: dsc-grapher-cli.pl
(+533 files in other folders)
